KUBE/Eks/Ingress-Applications/app1-nginx-flask-mysql/k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mariadb:10-focal
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-password
              mountPath: /run/secrets/db-password
      volumes:
        - name: db-password
          secret:
            secretName: app1-secret
