KUBE/Eks/Ingress-Applications/app1-nginx-flask-mysql/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app1
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
