KUBE/Eks/Ingress-Applications/app1-nginx-flask-mysql/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: app1
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
