KUBE/Eks/Ingress-Applications/app1-nginx-flask-mysql/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app1
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
